fix: all section-title spacing change

--- a/css/style.css
+++ b/css/style.css
@@ -6131,6 +6131,12 @@ body.admin-bar .header-menu-area.sticky_menu {
   line-height: 29px;
 }
 
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .blog-post-area.style-1 .elementor-container .elementor-section .elementor-widget-wrap {
+    padding-top: 32px;
+  }
+}
+
 .counter-area {
   position: relative;
   background-size: cover;
@@ -7491,7 +7497,7 @@ body.admin-bar .header-menu-area.sticky_menu {
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .testimonial-area .elementor-container .testimonial-card-wrapper {
-    margin-top: 24px;
+    margin-top: 32px;
   }
 }
 
@@ -12510,7 +12516,7 @@ ul.children {
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .why-choose-us-area .section-desc {
-    margin-top: 14px;
+    margin-top: 20px;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -12820,7 +12826,7 @@ ul.children {
 
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .why-choose-us-area .why-choose-us-title-wrapper {
-    padding-bottom: 24px !important;
+    padding-bottom: 32px !important;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
