--- a/sass/modules/_why-choose-us-area.scss
+++ b/sass/modules/_why-choose-us-area.scss
@@ -31,7 +31,7 @@
             display: flex;
             align-items: end;
             @include sm {
-                margin-top: 14px;
+                margin-top: 20px;
             }
             @include md {
                 margin-top: 24px;
@@ -358,7 +358,7 @@
 .why-choose-us-area{
     .why-choose-us-title-wrapper{
         @include sm{
-            padding-bottom: 24px !important;
+            padding-bottom: 32px !important;
         }
         @include md{
             padding-bottom: 32px !important;
