--- a/sass/modules/testimonial/_testimonial-area.scss
+++ b/sass/modules/testimonial/_testimonial-area.scss
@@ -131,7 +131,7 @@
     .elementor-container{
         .testimonial-card-wrapper{
             @include sm{
-                margin-top: 24px;
+                margin-top: 32px;
             }
         }
     }
